--- a/templates/drivers/image_form.html
+++ b/templates/drivers/image_form.html
@@ -1,4 +1,6 @@
-{% include 'header.html' %}
+{% extends 'base.html' %}
+
+{% block content %}
 
 <div class="container" style="margin-top: 5vh">
     <div class="col-md-6 col-md-offset-2">
@@ -39,4 +41,4 @@
     </div>
 </div>
 
-{% include 'footer.html' %}
+{% endblock %}
