drivers list connected to select

--- a/templates/regions/add_driver_to_region.html
+++ b/templates/regions/add_driver_to_region.html
@@ -16,7 +16,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12 container-resources">
                 <h4>Wybierz kierowcę:</h4>
                 <select class="form-control">
-                    {% for value in drivers %}
+                    {% for value in add_driver_region %}
                     <option>{{value.full_name}}</option>
                     {% endfor %}
                 </select>
