--- a/templates/drivers/edit_form.html
+++ b/templates/drivers/edit_form.html
@@ -3,31 +3,114 @@
 {% block content %}
 
 <div class="container" style="margin-top: 5vh">
-    <div class="col-md-6 col-md-offset-2">
-        <h2 style="text-align: center">Edit Driver</h2>
+    <div class="col-md-8 col-md-offset-2">
+        <h2 style="text-align: center">Dodaj Driver</h2>
         <h2>{{ success }}</h2>
         <h2>{{ error }}</h2>
 
 
-        <form class="form-horizontal" action="" method="post">
-            {% csrf_token %}
-            {{ form.non_field_errors }}
-            {% for field in form %}
+        <form class="well form-horizontal" action="" method="post" name="create_driver_form"
+              onsubmit="validate_form()">
+            <fieldset>
+                {% csrf_token %}
+                {{ form.non_field_errors }}
                 <div class="form-group">
-                    <div class="col-md-4 col-md-offset-left-2">
-                        {{ field.errors }}
+                    <label class="col-md-4 control-label">Full name</label>
+                    <div class="col-md-4 inputGroupContainer">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                            <input name="full_name" id="full_name" placeholder="Full name" class="form-control"
+                                   type="text" onblur="check_full_name()" value="{{ form.full_name.value }}">
+                        </div>
                     </div>
-                    <div class="col-md-4 col-md-offset-right-2">
-                        {{ field.label_tag }} {{ field }}
+                    <span id="full_name_glyph" style="visibility: hidden;color: orangered"><i
+                            class="glyphicon glyphicon-warning-sign"></i></span>
+                    <span id="full_name_error"></span>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4 control-label">Gender</label>
+                    <div class="col-md-4 inputGroupContainer">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                            <select name="gender" id="gender" class="form-control selectpicker" onblur="check_gender()" value="{{ form.gender.value }}">
+                                <option value="default">Select your gender</option>
+                                <option value="man">man</option>
+                                <option value="woman">woman</option>
+                                <option value="other">other</option>
+                                <option value="apache helicopter">apache helicopter</option>
+                            </select>
+                        </div>
+                    </div>
+                    <span id="gender_glyph" style="visibility: hidden;color: orangered"><i
+                            class="glyphicon glyphicon-warning-sign"></i></span>
+                    <span id="gender_error"></span>
+                </div>{% comment %}
+                <div class="form-group">
+                    <label class="col-md-4 control-label">Schedule</label>
+                    <div class="col-md-4 inputGroupContainer">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                            <textarea class="form-control" id="schedule" name="schedule"
+                                      placeholder="Schedule" onblur="check_schedule()"></textarea>
+                        </div>
+                    </div>
+                    <span id="schedule_glyph" style="visibility: hidden;color: orangered"><i
+                            class="glyphicon glyphicon-warning-sign"></i></span>
+                    <span id="schedule_error"></span>
+                </div>{% endcomment %}
+                <div class="form-group">
+                    <label class="col-md-4 control-label">Pesel</label>
+                    <div class="col-md-4 inputGroupContainer">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-info-sign"></i></span>
+                            <input name="pesel" id="pesel" placeholder="71010111111" class="form-control" type="text" onblur="check_pesel()" value="{{ form.pesel.value }}">
+                        </div>
+                    </div>
+                    <span id="pesel_glyph" style="visibility: hidden;color: orangered"><i
+                            class="glyphicon glyphicon-warning-sign"></i></span>
+                    <span id="pesel_error"></span>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4 control-label">Phone number</label>
+                    <div class="col-md-4 inputGroupContainer">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+                            <input name="phone_number" id="phone_number" placeholder="600600600" class="form-control"
+                                   type="text" onblur="check_phone_number()" value="{{ form.phone_number.value }}">
+                        </div>
+                    </div>
+                    <span id="phone_number_glyph" style="visibility: hidden;color: orangered"><i
+                            class="glyphicon glyphicon-warning-sign"></i></span>
+                    <span id="phone_number_error"></span>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4 control-label">Permissions level</label>
+                    <div class="col-md-4 inputGroupContainer">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-cog"></i></span>
+                            <select name="permissions_level" id="permissions_level" class="form-control selectpicker", onblur="check_permissions_level()" value="{{ form.permissions_level.value }}">
+                                <option value="default">Select permissions level</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                            </select>
+                        </div>
+                    </div>
+                    <span id="permissions_level_glyph" style="visibility: hidden;color: orangered"><i
+                            class="glyphicon glyphicon-warning-sign"></i></span>
+                    <span id="permissions_level_error"></span>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4 control-label"></label>
+                    <div class="col-md-4">
+                        <button type="submit" id="submit" class="btn btn-warning">Save<span
+                                class="glyphicon glyphicon-send"></span>
+                        </button>
+                        <a type="button" class="btn btn-danger" href="{% url 'drivers:list' %} ">Go back<span
+                                class="glyphicon glyphicon-remove"></span></a>
                     </div>
                 </div>
-            {% endfor %}
-            <div class="form-group">
-                <div class="col-sm-offset-4 col-sm-8">
-                    <button type="submit" class="btn btn-success btn-block">Save</button>
-                    <a type="button" class="btn btn-danger btn-block" href="{% url 'drivers:list' %} ">Go back</a>
-                </div>
-            </div>
+            </fieldset>
         </form>
     </div>
 </div>
