--- a/templates/drivers/edit_form.html
+++ b/templates/drivers/edit_form.html
@@ -2,49 +2,53 @@
 
 {% block content %}
 
-<div class="container" style="margin-top: 5vh">
-    <div class="col-md-8 col-md-offset-2">
-        <h2 style="text-align: center">Dodaj Driver</h2>
-        <h2>{{ success }}</h2>
-        <h2>{{ error }}</h2>
+    <div class="container" style="margin-top: 5vh">
+        <div class="col-md-8 col-md-offset-2">
+            <h2 style="text-align: center">Edytuj kierowcę</h2>
+            <h2>{{ success }}</h2>
+            <h2>{{ error }}</h2>
 
 
-        <form class="well form-horizontal" action="" method="post" name="edit_driver_form"
-              onsubmit="validate_form()">
-            <fieldset>
-                {% csrf_token %}
-                {{ form.non_field_errors }}
-                <div class="form-group">
-                    <label class="col-md-4 control-label">Full name</label>
-                    <div class="col-md-4 inputGroupContainer">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                            <input name="full_name" id="full_name" placeholder="Full name" class="form-control"
-                                   type="text" onblur="check_full_name(this.form.name)" value="{{ form.full_name.value }}">
+            <form class="well form-horizontal" action="" method="post" name="edit_driver_form"
+                  onsubmit="validate_form()">
+                <fieldset>
+                    {% csrf_token %}
+                    {{ form.non_field_errors }}
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Imię i nazwisko</label>
+                        <div class="col-md-4 inputGroupContainer">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                                <input name="full_name" id="full_name" placeholder="Imię i nazwisko"
+                                       class="form-control"
+                                       type="text" onblur="check_full_name(this.form.name)"
+                                       value="{{ form.full_name.value }}">
+                            </div>
                         </div>
+                        <span id="full_name_glyph" style="visibility: hidden;color: orangered"><i
+                                class="glyphicon glyphicon-warning-sign"></i></span>
+                        <span id="full_name_error"></span>
                     </div>
-                    <span id="full_name_glyph" style="visibility: hidden;color: orangered"><i
-                            class="glyphicon glyphicon-warning-sign"></i></span>
-                    <span id="full_name_error"></span>
-                </div>
-                <div class="form-group">
-                    <label class="col-md-4 control-label">Gender</label>
-                    <div class="col-md-4 inputGroupContainer">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                            <select name="gender" id="gender" class="form-control selectpicker" onblur="check_gender(this.form.name)" value="{{ form.gender.value }}">
-                                <option value="default">Select your gender</option>
-                                <option value="man">man</option>
-                                <option value="woman">woman</option>
-                                <option value="other">other</option>
-                                <option value="apache helicopter">apache helicopter</option>
-                            </select>
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Płeć</label>
+                        <div class="col-md-4 inputGroupContainer">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                                <select name="gender" id="gender" class="form-control selectpicker"
+                                        onblur="check_gender(this.form.name)" value="{{ form.gender.value }}">
+                                    <option value="default">Wybierz płeć</option>
+                                    <option value="mezczyzna">mężczyzna</option>
+                                    <option value="kobieta">kobieta</option>
+                                    <option value="inne">inne</option>
+                                    <option value="apache helicopter">apache helicopter</option>
+                                </select>
+                            </div>
                         </div>
+                        <span id="gender_glyph" style="visibility: hidden;color: orangered"><i
+                                class="glyphicon glyphicon-warning-sign"></i></span>
+                        <span id="gender_error"></span>
                     </div>
-                    <span id="gender_glyph" style="visibility: hidden;color: orangered"><i
-                            class="glyphicon glyphicon-warning-sign"></i></span>
-                    <span id="gender_error"></span>
-                </div>{% comment %}
+                    {% comment %}
                 <div class="form-group">
                     <label class="col-md-4 control-label">Schedule</label>
                     <div class="col-md-4 inputGroupContainer">
@@ -58,60 +62,61 @@
                             class="glyphicon glyphicon-warning-sign"></i></span>
                     <span id="schedule_error"></span>
                 </div>{% endcomment %}
-                <div class="form-group">
-                    <label class="col-md-4 control-label">Pesel</label>
-                    <div class="col-md-4 inputGroupContainer">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-info-sign"></i></span>
-                            <input name="pesel" id="pesel" placeholder="71010111111" class="form-control" type="text" onblur="check_pesel(this.form.name)" value="{{ form.pesel.value }}">
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Pesel</label>
+                        <div class="col-md-4 inputGroupContainer">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-info-sign"></i></span>
+                                <input name="pesel" id="pesel" placeholder="71010111111" class="form-control"
+                                       type="text" onblur="check_pesel(this.form.name)" value="{{ form.pesel.value }}">
+                            </div>
+                        </div>
+                        <span id="pesel_glyph" style="visibility: hidden;color: orangered"><i
+                                class="glyphicon glyphicon-warning-sign"></i></span>
+                        <span id="pesel_error"></span>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Numer telefonu</label>
+                        <div class="col-md-4 inputGroupContainer">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+                                <input name="phone_number" id="phone_number" placeholder="600600600"
+                                       class="form-control"
+                                       type="text" onblur="check_phone_number(this.form.name)"
+                                       value="{{ form.phone_number.value }}">
+                            </div>
+                        </div>
+                        <span id="phone_number_glyph" style="visibility: hidden;color: orangered"><i
+                                class="glyphicon glyphicon-warning-sign"></i></span>
+                        <span id="phone_number_error"></span>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Uprawnienia</label>
+                        <div class="col-md-4 inputGroupContainer">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-cog"></i></span>
+                                <input type="number" name="permissions_level" id="permissions_level"
+                                       class="form-control selectpicker" value="{{ form.permissions_level.value }}"
+                                       onblur="check_permissions_level(this.form.name)"
+                                       value="{{ form.permissions_level.value }}"></div>
+                        </div>
+                        <span id="permissions_level_glyph" style="visibility: hidden;color: orangered"><i
+                                class="glyphicon glyphicon-warning-sign"></i></span>
+                        <span id="permissions_level_error"></span>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-4 control-label"></label>
+                        <div class="col-md-4">
+                            <button type="submit" id="submit" class="btn btn-warning">Save<span
+                                    class="glyphicon glyphicon-send"></span>
+                            </button>
+                            <a type="button" class="btn btn-danger" href="{% url 'drivers:list' %} ">Go back<span
+                                    class="glyphicon glyphicon-remove"></span></a>
                         </div>
                     </div>
-                    <span id="pesel_glyph" style="visibility: hidden;color: orangered"><i
-                            class="glyphicon glyphicon-warning-sign"></i></span>
-                    <span id="pesel_error"></span>
-                </div>
-                <div class="form-group">
-                    <label class="col-md-4 control-label">Phone number</label>
-                    <div class="col-md-4 inputGroupContainer">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
-                            <input name="phone_number" id="phone_number" placeholder="600600600" class="form-control"
-                                   type="text" onblur="check_phone_number(this.form.name)" value="{{ form.phone_number.value }}">
-                        </div>
-                    </div>
-                    <span id="phone_number_glyph" style="visibility: hidden;color: orangered"><i
-                            class="glyphicon glyphicon-warning-sign"></i></span>
-                    <span id="phone_number_error"></span>
-                </div>
-                <div class="form-group">
-                    <label class="col-md-4 control-label">Permissions level</label>
-                    <div class="col-md-4 inputGroupContainer">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-cog"></i></span>
-                            <input type="number" name="permissions_level" id="permissions_level" class="form-control selectpicker" value="{{ form.permissions_level.value }}" onblur="check_permissions_level(this.form.name)" value="{{ form.permissions_level.value }}">
-    {% comment %}                            <option value="default">Select permissions level</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>{% endcomment %}
-                        </div>
-                    </div>
-                    <span id="permissions_level_glyph" style="visibility: hidden;color: orangered"><i
-                            class="glyphicon glyphicon-warning-sign"></i></span>
-                    <span id="permissions_level_error"></span>
-                </div>
-                <div class="form-group">
-                    <label class="col-md-4 control-label"></label>
-                    <div class="col-md-4">
-                        <button type="submit" id="submit" class="btn btn-warning">Save<span
-                                class="glyphicon glyphicon-send"></span>
-                        </button>
-                        <a type="button" class="btn btn-danger" href="{% url 'drivers:list' %} ">Go back<span
-                                class="glyphicon glyphicon-remove"></span></a>
-                    </div>
-                </div>
-            </fieldset>
-        </form>
+                </fieldset>
+            </form>
+        </div>
     </div>
-</div>
 
 {% endblock %}
