--- a/templates/drivers/edit_form.html
+++ b/templates/drivers/edit_form.html
@@ -107,10 +107,10 @@
                     <div class="form-group">
                         <label class="col-md-4 control-label"></label>
                         <div class="col-md-4">
-                            <button type="submit" id="submit" class="btn btn-warning">Save<span
+                            <button type="submit" id="submit" class="btn btn-warning">Zapisz<span
                                     class="glyphicon glyphicon-send"></span>
                             </button>
-                            <a type="button" class="btn btn-danger" href="{% url 'drivers:list' %} ">Go back<span
+                            <a type="button" class="btn btn-danger" href="{% url 'drivers:list' %} ">Wróć<span
                                     class="glyphicon glyphicon-remove"></span></a>
                         </div>
                     </div>
