--- a/templates/drivers/edit_form.html
+++ b/templates/drivers/edit_form.html
@@ -5,8 +5,13 @@
     <div class="container" style="margin-top: 5vh">
         <div class="col-md-8 col-md-offset-2">
             <h2 style="text-align: center">Edytuj kierowcę</h2>
-            <h2>{{ success }}</h2>
-            <h2>{{ error }}</h2>
+            {% if form.errors %}
+                <div class="alert alert-danger">
+                    {% for field in form %}
+                        {{ field.errors }}
+                    {% endfor %}
+                </div>
+            {% endif %}
 
 
             <form class="well form-horizontal" action="" method="post" name="edit_driver_form"
@@ -110,8 +115,10 @@
                             <button type="submit" id="submit" class="btn btn-warning">Save<span
                                     class="glyphicon glyphicon-send"></span>
                             </button>
-                            <a type="button" class="btn btn-danger" href="{% url 'drivers:list' %} ">Go back<span
-                                    class="glyphicon glyphicon-remove"></span></a>
+                            <button class="btn btn-danger" name="cancel" formnovalidate>Wróć<span
+                                class="glyphicon glyphicon-remove"></span>
+                            </button>
+
                         </div>
                     </div>
                 </fieldset>
