--- a/templates/drivers/list.html
+++ b/templates/drivers/list.html
@@ -47,4 +47,22 @@
         </div>
     </div>
 
+    {% if is_paginated %}
+       <div class="pagination">
+            <span class="step-links">
+                {% if paginator.has_previous %}
+                    <a href="?page={{ paginator.previous_page_number }}">Wcześniejsza</a>
+                {% endif %}
+
+                <span class="current">
+                    Page {{ paginator.number }} of {{ paginator.paginator.num_pages }}.
+                </span>
+
+                {% if paginator.has_next %}
+                    <a href="?page={{ paginator.next_page_number }}">Następna</a>
+                {% endif %}
+            </span>
+        </div>
+    {% endif %}
+
 {% endblock %}
