--- a/templates/drivers/create_form.html
+++ b/templates/drivers/create_form.html
@@ -28,6 +28,8 @@
                                        type="text" onblur="check_full_name(this.form.name)">
                             </div>
                         </div>
+                        <span id="full_name_glyph_positive" style="visibility: hidden;color: greenyellow"><i
+                            class="glyphicon glyphicon-ok"></i></span>
                         <span id="full_name_glyph" style="visibility: hidden;color: orangered"><i
                                 class="glyphicon glyphicon-warning-sign"></i></span>
                         <span id="full_name_error"></span>
@@ -47,10 +49,10 @@
                                 </select>
                             </div>
                         </div>
+                        <span id="gender_glyph_positive" style="visibility: hidden;color: greenyellow"><i
+                            class="glyphicon glyphicon-ok"></i></span>
                         <span id="gender_glyph" style="visibility: hidden;color: orangered"><i
                                 class="glyphicon glyphicon-warning-sign"></i></span>
-                        {% comment %}<span id="gender_glyph_positive" style="visibility: hidden;color: lawngreen"><i
-                            class="glyphicon glyphicon-ok"></i></span>{% endcomment %}
                         <span id="gender_error"></span>
                     </div>
                     {% comment %}
@@ -76,6 +78,8 @@
                                        type="text" onblur="check_pesel(this.form.name)">
                             </div>
                         </div>
+                        <span id="pesel_glyph_positive" style="visibility: hidden;color: greenyellow"><i
+                            class="glyphicon glyphicon-ok"></i></span>
                         <span id="pesel_glyph" style="visibility: hidden;color: orangered"><i
                                 class="glyphicon glyphicon-warning-sign"></i></span>
                         <span id="pesel_error"></span>
@@ -90,6 +94,8 @@
                                        type="text" onblur="check_phone_number(this.form.name)">
                             </div>
                         </div>
+                        <span id="phone_number_glyph_positive" style="visibility: hidden;color: greenyellow"><i
+                            class="glyphicon glyphicon-ok"></i></span>
                         <span id="phone_number_glyph" style="visibility: hidden;color: orangered"><i
                                 class="glyphicon glyphicon-warning-sign"></i></span>
                         <span id="phone_number_error"></span>
@@ -104,6 +110,8 @@
                                        onblur="check_permissions_level(this.form.name)">
                             </div>
                         </div>
+                        <span id="permissions_level_glyph_positive" style="visibility: hidden;color: greenyellow"><i
+                            class="glyphicon glyphicon-ok"></i></span>
                         <span id="permissions_level_glyph" style="visibility: hidden;color: orangered"><i
                                 class="glyphicon glyphicon-warning-sign"></i></span>
                         <span id="permissions_level_error"></span>
@@ -115,7 +123,7 @@
                                     class="glyphicon glyphicon-send"></span>
                             </button>
                             <button class="btn btn-danger" name="cancel" formnovalidate>Wróć<span
-                                class="glyphicon glyphicon-remove"></span>
+                                    class="glyphicon glyphicon-remove"></span>
                             </button>
                         </div>
                     </div>
@@ -125,20 +133,3 @@
     </div>
 
 {% endblock %}
-
-{% comment %}<div class="panel-body">
-    <span class="term-description">{% trans 'Full name' %}</span>
-    <hr>
-    <textarea id="{{ form.full_name }}" name="{{ form.full_name }}"
-              class="js_ckeditor_terms"
-              data-constraints="{% if form.full_name.required %}@Required{% endif %}"
-              class="form-control {% if form.full_name.errors %}form-control-has-validation{% endif %}">{% if form.full_name.data %}
-        {{ form.full_name.data }} {% elif form.full_name.value %}
-        {{ form.full_name.value }}{% endif %}
-    </textarea>
-    {% if form.full_name.errors %}
-        {% for error in form.full_name.errors %}
-            <span class="form-validation">{{ error }}</span>
-        {% endfor %}
-    {% endif %}
-</div>{% endcomment %}
