--- a/templates/drivers/create_form.html
+++ b/templates/drivers/create_form.html
@@ -20,7 +20,7 @@
                     {{ form.non_field_errors }}
                     <div class="form-group">
                         <label class="col-md-4 control-label">Imię i nazwisko</label>
-                        <div class="col-md-5 inputGroupContainer">
+                        <div class="col-md-4 inputGroupContainer">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                                 <input name="full_name" id="full_name" placeholder="Imię i nazwisko"
@@ -36,7 +36,7 @@
                     </div>
                     <div class="form-group">
                         <label class="col-md-4 control-label">Płeć</label>
-                        <div class="col-md-5 inputGroupContainer">
+                        <div class="col-md-4 inputGroupContainer">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                                 <select name="gender" id="gender" class="form-control selectpicker"
@@ -71,7 +71,7 @@
                 </div>{% endcomment %}
                     <div class="form-group">
                         <label class="col-md-4 control-label">Pesel</label>
-                        <div class="col-md-5 inputGroupContainer">
+                        <div class="col-md-4 inputGroupContainer">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-info-sign"></i></span>
                                 <input name="pesel" id="pesel" placeholder="71010111111" class="form-control"
@@ -86,7 +86,7 @@
                     </div>
                     <div class="form-group">
                         <label class="col-md-4 control-label">Numer telefonu</label>
-                        <div class="col-md-5 inputGroupContainer">
+                        <div class="col-md-4 inputGroupContainer">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
                                 <input name="phone_number" id="phone_number" placeholder="600600600"
@@ -102,26 +102,26 @@
                     </div>
                     <div class="form-group">
                         <label class="col-md-4 control-label">Uprawnienia</label>
-                        <div class="col-md-5 inputGroupContainer">
+                        <div class="col-md-4 inputGroupContainer">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-cog"></i></span>
                                 <select name="permissions_level" id="permissions_level"
                                         class="form-control selectpicker" placeholder="10"
                                         onblur="check_permissions_level(this.form.name)">
-                                    <option value="default">Wybier kategorię</option>
-                                    <option value="AM">Prawo jazdy kategori AM</option>
-                                    <option value="A1">Prawo jazdy kategori A1</option>
-                                    <option value="A2">Prawo jazdy kategori A2</option>
-                                    <option value="B">Prawo jazdy kategori B</option>
-                                    <option value="B+E">Prawo jazdy kategori B+E</option>
-                                    <option value="C">Prawo jazdy kategori C</option>
-                                    <option value="C+E">Prawo jazdy kategori C+E</option>
-                                    <option value="C1">Prawo jazdy kategori C1</option>
-                                    <option value="C1+E">Prawo jazdy kategori C1+e</option>
-                                    <option value="D">Prawo jazdy kategori D</option>
-                                    <option value="D+E">Prawo jazdy kategori D+E</option>
-                                    <option value="D1">Prawo jazdy kategori D1</option>
-                                    <option value="D1+E">Prawo jazdy kategori D1+E</option>
+                                    <option value="default">Wybierz kategorię</option>
+                                    <option value="AM">Kategoria AM</option>
+                                    <option value="A1">Kategoria A1</option>
+                                    <option value="A2">Kategoria A2</option>
+                                    <option value="B">Kategoria B</option>
+                                    <option value="B+E">Kategoria B+E</option>
+                                    <option value="C">Kategoria C</option>
+                                    <option value="C+E">Kategoria C+E</option>
+                                    <option value="C1">Kategoria C1</option>
+                                    <option value="C1+E">Kategoria C1+e</option>
+                                    <option value="D">Kategoria D</option>
+                                    <option value="D+E">Kategoria D+E</option>
+                                    <option value="D1">Kategoria D1</option>
+                                    <option value="D1+E">Kategoria D1+E</option>
                                 </select>
                             </div>
                         </div>
