region and driver connection part 2

--- a/templates/regions/regions.html
+++ b/templates/regions/regions.html
@@ -48,7 +48,7 @@
 					var contextmenuDir = document.createElement("div");
 					contextmenuDir.className  = 'contextmenu';
 					contextmenuDir.innerHTML = '<a id="menu1"><div class="context">Zaznacz obszar do aktualizacji<\/div><\/a>'
-                    + '<a href="./../add/1184" id="menu2"><div class="context">Przydziel zasoby do obszaru<\/div><\/a>';
+                    + '<a href="./regions/add/1184" id="menu2"><div class="context">Przydziel zasoby do obszaru<\/div><\/a>';
 				    /*TODO: Do zmiany kiedy regiony zostaną wprowadzone do bazy danych przez autora widoku*/
 					$(map1.getDiv()).append(contextmenuDir);
 					setMenuXY(event.latLng, map1);
